--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: edit degree
-  uni: edit uni
-  year: march, 2022
+- degree: edit2 degree
+  uni: edit2 uni
+  year: march, 20222
   awards: Most Dedicated Student per Optional Activities Completed
-  summary: edit degree, uni and year
+  summary: edit degree, uni and year2
